# rusty_rapidgzip

./: .bacon-locations  .gitignore  2026-05-09-151225-this-session-is-being-continued-from-a-previous-c.txt  2026-05-17-222938-this-session-is-being-continued-from-a-previous-c.txt  2026-05-29-230504-this-session-is-being-continued-from-a-previous-c.txt  CHANGELOG.md  CLAUDE.MD  Cargo.toml  DEV.txt  LICENSE  README.md  bench.sh  bench_all_the_cores.sh  bench_all_the_cores_bgzf.sh  bench_revs.sh  deny.toml  flake.nix  stats.py  todo.txt
.github/workflows/: ci.yml  release.yml
crates/rapidgzip/: Cargo.toml
crates/rapidgzip-bin/: Cargo.toml
crates/rapidgzip-bin/src/: main.rs
crates/rapidgzip-deflate/: Cargo.toml
crates/rapidgzip-deflate/src/: bitreader.rs  block_finder.rs  huffman.rs  inflate.rs  lib.rs  speculative.rs  speculative_zlib.rs
crates/rapidgzip-inflate/: Cargo.toml
crates/rapidgzip-inflate/src/: allocate.rs  c_api.rs  crc32.rs  inflate.rs  lib.rs  stable.rs
crates/rapidgzip-inflate/src/inflate/: bitreader.rs  window.rs
crates/rapidgzip/benches/: throughput.rs
crates/rapidgzip/src/: gzip.rs  lib.rs  pipeline.rs
crates/rapidgzip/tests/: golden_hash.rs
crates/rusty-rapidgzip/: Cargo.toml  README.md  build.rs
crates/rusty-rapidgzip-bin/: Cargo.toml
crates/rusty-rapidgzip-bin-isolated/: Cargo.toml
crates/rusty-rapidgzip-bin-isolated/src/: direct.rs  main.rs  ring.rs  shm_alloc.rs
crates/rusty-rapidgzip-bin/src/: bench_autotune.rs  bench_fastq.rs  bench_inflate.rs  main.rs
crates/rusty-rapidgzip-deflate/: Cargo.toml
crates/rusty-rapidgzip-deflate/benches/: inflate_kernels.rs
crates/rusty-rapidgzip-deflate/src/: bitreader.rs  block_finder.rs  fast_inflate.rs  huffman.rs  inflate.rs  lib.rs  safe_inflate.rs  speculative.rs  speculative_zlib.rs  tables.rs
crates/rusty-rapidgzip-deflate/src/inflate/: speculative.rs
crates/rusty-rapidgzip-deflate/tests/: miri_edge.rs
crates/rusty-rapidgzip-inflate/: Cargo.toml
crates/rusty-rapidgzip-inflate/src/: adler32.rs  crc32.rs  inflate.rs  lib.rs  speculative.rs  stable.rs  weak_slice.rs
crates/rusty-rapidgzip-inflate/src/inflate/: writer.rs
crates/rusty-rapidgzip-stringpod/: Cargo.toml
crates/rusty-rapidgzip-stringpod/src/: dual.rs  lib.rs  single.rs  storage.rs
crates/rusty-rapidgzip/benches/: throughput.rs
crates/rusty-rapidgzip/src/: autotune.rs  gzip.rs  isal_ffi.rs  isal_shim.c  kernel_ab.rs  lib.rs  libdeflate_ffi.rs  pipeline.rs  streaming.rs  zlibrs_ffi.rs  zune_backend.rs
crates/rusty-rapidgzip/src/deflate/: block_finder.rs  fast_inflate.rs  huffman.rs  inflate.rs  mod.rs  safe_inflate.rs  speculative.rs  tables.rs
crates/rusty-rapidgzip/tests/: adversarial.rs  concat.rs  fastq.rs  golden_hash.rs  miri_edge.rs  nested_gzip.rs
crates/rusty-rapidgzip/tests/adversarial/: gen.py
dev/: fuzz.py
docs/: RAPIDGZIP_KERNEL_PORT_PLAN.md  perf-todo-lazy-refill.md
tests/corpus/: corpus.json  download_corpus.py  reference_checksums.py  reference_sums.json  verify_rapidgzip.py
xtask/: Cargo.toml
xtask/src/: main.rs
