[workspace]
resolver = "2"
members = [
    "crates/rapidgzip-deflate",
    "crates/rapidgzip",
    "crates/rapidgzip-bin",
    "third_party/zlib-rs",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TyberiusPrime/rapidgzip_rs"

[workspace.dependencies]
rapidgzip-deflate = { path = "crates/rapidgzip-deflate" }
rapidgzip = { path = "crates/rapidgzip" }

crc32fast = "1.4"
crossbeam-channel = "0.5"
thiserror = "2"
memmap2 = "0.9"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
lto = "thin"
codegen-units = 1
