[workspace]
resolver = "2"
members = [
    "crates/rusty-rapidgzip-deflate",
    "crates/rusty-rapidgzip",
    "crates/rusty-rapidgzip-bin",
    "crates/rusty-rapidgzip-inflate",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TyberiusPrime/rusty-rapidgzip"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]

[workspace.dependencies]
rusty-rapidgzip-deflate = { path = "crates/rusty-rapidgzip-deflate" }
rusty-rapidgzip = { path = "crates/rusty-rapidgzip" }
rusty-rapidgzip-inflate = { path = "crates/rusty-rapidgzip-inflate" }
stringpod = { path = "../stringpod" }

bstr = "1"
crc32fast = "1.4"
crossbeam-channel = "0.5"
thiserror = "2"
memmap2 = "0.9"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
lto = "thin"
codegen-units = 1

# For samply / perf. Inherits release perf characteristics but emits full
# debug info + frame pointers so call stacks resolve cleanly. Build with
# `cargo build --profile profiling -p rapidgzip-bin` →
# `./target_claude/profiling/rapidgzip-rs`.
[profile.profiling]
inherits = "release"
debug = "full"
strip = false
