[workspace]
resolver = "2"
members = [
    "crates/rusty-rapidgzip",
    "crates/rusty-rapidgzip-bin",
    #"xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TyberiusPrime/rusty-rapidgzip"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]

[workspace.dependencies]
# default-features = false so the bin's own `default` / `--no-default-features`
# controls libdeflate; an inherited `default-features = false` is otherwise
# ignored unless set here in the workspace table.
rusty-rapidgzip = { path = "crates/rusty-rapidgzip", version = "0.1.0", default-features = false }

bstr = "1"
# Pure-Rust zlib (zlib-rs) via its standard-zlib C ABI; the `zlib-rs` backend.
libz-rs-sys = "0.6.3"
crc32fast = "1.4"
crossbeam-channel = "0.5"
thiserror = "2"
memmap2 = "0.9"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
lto = "thin"
codegen-units = 1

# For samply / perf. Inherits release perf characteristics but emits full
# debug info + frame pointers so call stacks resolve cleanly. Build with
# `cargo build --profile profiling -p rapidgzip-bin` →
# `./target_claude/profiling/rapidgzip-rs`.
[profile.profiling]
inherits = "release"
debug = "full"
strip = false
