[package]
name = "rapidgzip-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for rapidgzip_rs."

[[bin]]
name = "rapidgzip-rs"
path = "src/main.rs"

[dependencies]
rapidgzip.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
anyhow.workspace = true
