[package]
name = "rapidgzip-deflate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DEFLATE decoder primitives (bit reader, Huffman, inflate, speculative-no-window mode) for rapidgzip_rs."

[dependencies]
thiserror.workspace = true
zlib-rs-vendored = { path = "../../third_party/zlib-rs" }
