[package]
name = "rapidgzip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming, parallel gzip decoder. Inspired by rapidgzip / pugz."

[dependencies]
rapidgzip-deflate.workspace = true
crc32fast.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
memmap2.workspace = true

[dev-dependencies]
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
criterion.workspace = true

[[bench]]
name = "throughput"
harness = false
