[package]
name = "rusty-rapidgzip-bin-isolated"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Process-isolated CLI for rusty-rapidgzip: the decoder runs in a child process and decoded bytes cross a shared-memory SPSC ring, so a fault in the (deeply unsafe) decode engine cannot corrupt the consumer."

[[bin]]
name = "rusty-rapidgzip-rs-isolated"
path = "src/main.rs"

[features]
# Mirror the in-process bin so the only variable measured is the process wall.
default = ["libdeflate"]
libdeflate = ["rusty-rapidgzip/libdeflate"]
isal = ["rusty-rapidgzip/isal"]
zlib-rs = ["rusty-rapidgzip/zlib-rs"]
zune = ["rusty-rapidgzip/zune"]

[dependencies]
rusty-rapidgzip.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
anyhow.workspace = true
shared_memory = "0.12"
