[package]
name = "rusty-rapidgzip-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for rusty-rapidgzip"

[[bin]]
name = "rusty-rapidgzip-rs"
path = "src/main.rs"

[[bin]]
name = "bench-inflate"
path = "src/bench_inflate.rs"

[[bin]]
name = "bench-autotune"
path = "src/bench_autotune.rs"

[dependencies]
rusty-rapidgzip.workspace = true
rusty-rapidgzip-deflate.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
anyhow.workspace = true
libc = "0.2"
