[package]
name = "rusty-rapidgzip-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for rusty-rapidgzip"

[[bin]]
name = "rusty-rapidgzip-rs"
path = "src/main.rs"

[[bin]]
name = "bench-inflate"
path = "src/bench_inflate.rs"

[features]
# libdeflate-backed decode is on by default (a 1.1–1.3x win on multi-member /
# BGZF, a no-op on single-member). Build with `--no-default-features` to get the
# pure-Rust kernel and drop the external libdeflate dependency. The lib is pulled
# with `default-features = false` so this flag is a real off-switch.
default = ["libdeflate"]
libdeflate = ["rusty-rapidgzip/libdeflate"]
# Experimental ISA-L backend (see the lib's `isal` feature). Benchmark with
# `--no-default-features --features isal`.
isal = ["rusty-rapidgzip/isal"]
# Experimental pure-Rust zlib-rs backend (see the lib's `zlib-rs` feature).
# Benchmark with `--no-default-features --features zlib-rs`.
zlib-rs = ["rusty-rapidgzip/zlib-rs"]
# Experimental pure-Rust zune-inflate backend (see the lib's `zune` feature).
# Benchmark with `--no-default-features --features zune`.
zune = ["rusty-rapidgzip/zune"]

[dependencies]
rusty-rapidgzip.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
anyhow.workspace = true
libc = "0.2"
