[package]
name = "rusty-rapidgzip-inflate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Speculative (mid-stream) DEFLATE marker ABI for rusty-rapidgzip."

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
