[package]
name = "fastqrab-stringpod"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
    bstr = {workspace = true}

[lints]
workspace = true
