[package]
name = "fastqrab-stringpod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cache-friendly columnar storage for many small byte strings (FASTQ reads, qualities, names)."

[dependencies]
bstr.workspace = true
