[package]
name = "rusty-rapidgzip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming, parallel gzip decoder. Inspired by rapidgzip / pugz."

[features]
# On by default: route the non-speculative per-member decode (and the BGZF
# fast path) through the external libdeflate C library instead of our own
# inflate kernel. Measured a 1.1–1.3x win wherever members sit fully inside a
# chunk (multi-member gzip, BGZF) and a true no-op on single-member streams
# (libdeflate never engages — the decompressor isn't even allocated). Requires
# libdeflate's static lib at $LIBDEFLATE_LIB_DIR (see build.rs); build with
# `--no-default-features` to use the pure-Rust kernel and drop the C dependency.
default = ["libdeflate"]
libdeflate = []
# Experimental alternative backend: route per-member / BGZF decode through Intel
# ISA-L's igzip (`isal_inflate`, hand-written SIMD assembly) instead of our own
# kernel, to quantify whether it beats libdeflate / pure-Rust. Mutually used as
# an either/or with `libdeflate` (libdeflate takes precedence if both are on).
# Compiles a small C shim against ISA-L's headers and links libisal at
# $ISAL_LIB_DIR / $ISAL_INCLUDE_DIR (see build.rs). Benchmark with
# `--no-default-features --features isal`.
isal = []

[dependencies]
crc32fast.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
memmap2.workspace = true

[build-dependencies]
# Only used to compile src/isal_shim.c when the `isal` feature is active.
cc = "1"

[dev-dependencies]
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
criterion.workspace = true

[[bench]]
name = "throughput"
harness = false
